--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
-    "next": "latest",
+    "next": "^13",
     "react": "latest",
     "react-dom": "latest"
   },
