--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "latest",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "swiper": "^11.0.4"
   },
   "devDependencies": {
     "@types/node": "latest",
